# rust_book

./: .gitignore  README.md
chapter10/lifetimes/src/: main.rs
chapter10/src/: lib.rs  main.rs
chapter11/: Cargo.toml
chapter11/adder/src/: lib.rs
chapter11/guess/src/: lib.rs
chapter11/silly_function/: Cargo.toml
chapter11/silly_function/src/: lib.rs
chapter13/src/: lib.rs  main.rs
chapter14/: Cargo.toml
chapter14/art/: Cargo.toml
chapter14/art/src/: lib.rs  main.rs
chapter14/src/: lib.rs
chapter14/workspaces/add/add_one/src/: lib.rs
chapter14/workspaces/add/adder/src/: main.rs
chapter15/: Cargo.toml
chapter15/src/: lib.rs  main.rs
chapter16/: Cargo.toml
chapter16/src/: main.rs
chapter17/: Cargo.toml
chapter17/src/: lib.rs  main.rs
chapter17/src/blog/: mod.rs
chapter18/: Cargo.toml
chapter18/src/: main.rs
chapter19/: Cargo.toml
chapter19/src/: main.rs
chapter19/src/hello_macro/: mod.rs
chapter6/src/: main.rs
chapter7/restaurant/src/: lib.rs
chapter7/src/: main.rs
chapter8/src/: main.rs
chapter9/: Cargo.toml
chapter9/src/: main.rs
minigrep/src/: lib.rs  main.rs
src/: main.rs
