[package]
name = "art_dx"
version = "0.1.0"
edition = "2021"
description = "Just an example crate you have to write from The Rust Programming Language Book"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
